compiler/testData/asJava/lightClasses/compilationErrors/ExpectedNestedClassInObject.kt
// p.B.Nested
// FIR_COMPARISON

package p

expect object B {
    class Nested {}
}